1.2.0 (not yet released)
------------------------


1.1.0 (2014-08-04)
------------------

  - Output required for fields even on forms that don't define required_css_class [#16]

1.0.1 (2014-07-07)
------------------

  - (Bugfix) Handle None initial values more robustly in MultiForm

1.0.0 (2014-07-04)
------------------

Backwards-incompatible changes:

  - Moved all the partials to live the betterforms directory
  - Dropped support for Django 1.3

New Features and Bugfixes:

  - Support Python 3
  - Support Django 1.6
  - Add MultiForm and MultiModelForm
  - Make NonBraindamagedErrorMixin use error_class
  - Use NON_FIELD_ERRORS constant instead of hardcoded value
  - Add csrf_exempt argument for form_as_fieldsets
  - Add legend attribute to Fieldset

0.1.3 (2013-10-17)
------------------

  - Add ``betterforms.changelist`` module with form classes that assist in
    listing, searching and filtering querysets.

0.1.2 (2013-07-25)
------------------

* actually update the package.

0.1.1 (2013-07-25)
------------------

* fix form rendering for forms with no fieldsets

0.1.0 (2013-07-25)
------------------

Initial Release