@@ -1,0 +1,31 @@
+{% block form_head %}
+  {% if not no_head %}
+    {% if not csrf_exempt %}
+      {% csrf_token %}
+    {% endif %}
+  {% endif %}
+{% endblock %}
+
+{% block form_body %}
+  {% with formset=form %}
+    <div class="formSet {{ formset.prefix }}">
+    {{ formset.management_form }}
+    {{ formset.non_form_errors }}
+    {% for form in formset.forms %}
+      <div class="formSetForm {{ form.prefix }}">
+        {{ form.non_field_errors }}
+        {# Hack to allow recursive template inclusion #}
+        {% with fieldset_template_name="betterforms/fieldset_as_div.html" field_template_name="betterforms/field_as_div.html" %}
+          {% for thing in form %}
+            {% if thing.is_fieldset %}
+              {% include fieldset_template_name with fieldset=thing %}
+            {% else %}
+              {% include field_template_name with field=thing %}
+            {% endif %}
+          {% endfor %}
+        {% endwith %}
+      </div>
+    {% endfor %}
+    </div>
+  {% endwith %}
+{% endblock %}
